--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,6 +3,8 @@
   <%= partial 'partials/banner' %>
   <!-- About Section -->
   <%= partial 'partials/about' %>
+  <!-- Skills Section -->
+  <%= partial 'partials/skills' %>
   <!-- Projects Section -->
   <%= partial 'partials/projects' %>
   <!-- Social Links Section -->
