--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -1,6 +1,6 @@
 <div class="row justify-content-center banner">
   <div class="col-12 d-flex flex-column justify-content-center align-items-center h-100">
-    <%= image_tag 'placeholder.png', alt: "profile photo", class: 'avatar' %>
-    <h1 class="title-main">Portfolio</h1>
+    <%= image_tag 'https://source.unsplash.com/random/1000x500', alt: "profile photo", class: 'avatar' %>
+    <h1 class="title-main">Yvonne Tou</h1>
   </div>
 </div>
