--- a/source/stylesheets/components/_banner.scss
+++ b/source/stylesheets/components/_banner.scss
@@ -1,3 +1,14 @@
 .banner {
-  height: 100vh;
+  height: 50vh;
+  background-image: url(https://source.unsplash.com/random/1000x500);
+  background-color: rgba(0, 0, 0, 0.8);
+  background-size: cover;
+  color: white;
+  padding: 160px 0;
+}
+
+.title-main {
+  font-size: 60px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  text-shadow: 1px 1px 5px grey;
 }
