update about, projects and skills

--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -2,8 +2,12 @@
   <div class="col-12">
     <div class="container">
       <div id="about">
-        <h2>About</h2>
-        <p>I'm ....</p>
+        <h2>About me</h2>
+        <p>A passionate full-stack software engineer with hands on experience in both frontend and backend development. Proficient in working in fast-paced, high-pressure environment. Proven track record of performance with minimal supervision and displaying outstanding learning abilities, with ample experience in adapting to new environment and grasping new knowledge.Currently seeking full-stack/ backend engineering opportunities.</p>
+
+        <p>Currently working at Mercari, inc. which is the first unicorn tech company in Japan.</p>
+
+        <p>Area of Expertise: Frontend Web Development, Backend Web Development, Policy/ Procedure Writing and Development, Risk/Safety Management Systems.</p>
       </div>
     </div>
   </div>
