--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,11 @@
-<div class="container ">
   <!-- Banner Section -->
   <%= partial 'partials/banner' %>
+<div class="container ">
   <!-- About Section -->
   <%= partial 'partials/about' %>
   <!-- Skills Section -->
   <%= partial 'partials/skills' %>
+  <%# <%= partial 'partials/skills' %>
   <!-- Projects Section -->
   <%= partial 'partials/projects' %>
   <!-- Social Links Section -->
