--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -1,1 +1,25 @@
 // Specific CSS for your home-page
+.list-inline {
+  list-style: none;
+  padding-left: 0px;
+}
+
+.list-inline > li{
+  display: inline-block;
+  padding: 20px 20px;
+  font-size: 48px;
+}
+
+.skills-logo-inline {
+  display: inline-block;
+  padding: none;
+  height: 72px;
+}
+
+.space-margin {
+  margin: 80px 0px;
+}
+
+h2 {
+  margin-bottom: 20px;
+}
