update banner image and add tool logos

--- a/source/stylesheets/components/_banner.scss
+++ b/source/stylesheets/components/_banner.scss
@@ -1,6 +1,8 @@
 .banner {
   height: 60vh;
-  background-image: url(https://source.unsplash.com/random/1000x500);
+  // background-image: url(https://source.unsplash.com/random/1000x500);
+  background-image: url(../../images/banners/marko-brecic-unsplash.jpg);
+  background-position: 0px -550px;
   background-color: rgba(0, 0, 0, 0.8);
   background-size: cover;
   color: white;
